# akarin_std

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: allocator.hpp  database.hpp  iterator.hpp  job_system.hpp  map.hpp  match.hpp  monoid.hpp  pool_allocator.hpp  vector.hpp
include/tests/: database_test.hpp  job_system_test.hpp  map_test.hpp  match_test.hpp  monoid_test.hpp  pool_allocator_test.hpp  vector_test.hpp
src/tests/: test.cpp
